--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,21 @@
 @import "tailwindcss";
+
+.overflow-y-auto {
+  &::-webkit-scrollbar {
+    width: 5px;
+    display: block !important;
+  }
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: #d1d5db;
+    border-radius: 10px;
+  }
+}
+
+/* Firefox */
+.overflow-y-auto {
+  scrollbar-width: thin;
+  scrollbar-color: #d1d5db transparent;
+}
